load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:lints/cargo_lint_sources.bzl", "cargo_lint_sources")
load("//rules_rust_ext:defs.bzl", "rust_test_with_miri")

package(default_visibility = ["//visibility:public"])

cargo_lint_sources()

exports_files(["Cargo.toml"])

rust_library(
    name = "nockchain-libp2p-io",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = [
        "//crates/nockvm/rust/nockvm_macros",
        "//crates/noun-serde-derive",
    ] + all_crate_deps(proc_macro = True),
    deps = [
        "//crates/nockapp",
        "//crates/nockvm/rust/ibig",
        "//crates/nockvm/rust/nockvm",
        "//crates/noun-serde",
    ] + all_crate_deps(),
)

# Unit tests for nockchain-libp2p-io
rust_test(
    name = "nockchain_libp2p_io_unit_tests",
    size = "small",
    compile_data = [
        "//crates/nockchain-libp2p-io/testdata:req_res_gen1_cbor_vectors.json",
        "//crates/nockchain-libp2p-io/testdata:req_res_gen2_cbor_vectors.json",
    ],
    crate = ":nockchain-libp2p-io",
    data = [
        "//crates/nockchain-libp2p-io/testdata:req_res_gen1_cbor_vectors.json",
        "//crates/nockchain-libp2p-io/testdata:req_res_gen2_cbor_vectors.json",
    ],
    deps = [
        "//crates/chaff",
        "//crates/kernels/dumb:kernels-open-dumb",
        "//crates/nockchain:nockchain-lib",
        "//crates/nockchain-types",
        "//crates/zkvm-jetpack",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test_with_miri(
    name = "nockchain_libp2p_io_unit_tests_miri",
    size = "small",
    compile_data = [
        "//crates/nockchain-libp2p-io/testdata:req_res_gen1_cbor_vectors.json",
        "//crates/nockchain-libp2p-io/testdata:req_res_gen2_cbor_vectors.json",
    ],
    crate = ":nockchain-libp2p-io",
    data = [
        "//crates/nockchain-libp2p-io/testdata:req_res_gen1_cbor_vectors.json",
        "//crates/nockchain-libp2p-io/testdata:req_res_gen2_cbor_vectors.json",
    ],
    deps = [
        "//crates/chaff",
        "//crates/kernels/dumb:kernels-open-dumb",
        "//crates/nockchain:nockchain-lib",
        "//crates/nockchain-types",
        "//crates/zkvm-jetpack",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "nockchain_libp2p_io_req_res_gen2_e2e_test",
    size = "medium",
    srcs = [
        "tests/harness/mod.rs",
        "tests/req_res_gen2_e2e.rs",
    ],
    aliases = aliases(),
    crate_root = "tests/req_res_gen2_e2e.rs",
    edition = "2021",
    deps = [
        ":nockchain-libp2p-io",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "nockchain_libp2p_io_req_res_limits_test",
    size = "medium",
    srcs = [
        "tests/harness/mod.rs",
        "tests/req_res_limits.rs",
    ],
    aliases = aliases(),
    crate_root = "tests/req_res_limits.rs",
    edition = "2021",
    deps = [
        ":nockchain-libp2p-io",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "nockchain_libp2p_io_req_res_response_validation_test",
    size = "medium",
    srcs = [
        "tests/harness/mod.rs",
        "tests/req_res_response_validation.rs",
    ],
    aliases = aliases(),
    crate_root = "tests/req_res_response_validation.rs",
    edition = "2021",
    deps = [
        ":nockchain-libp2p-io",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "nockchain_libp2p_io_req_res_state_bounds_test",
    size = "small",
    srcs = [
        "tests/req_res_state_bounds.rs",
    ],
    aliases = aliases(),
    crate_root = "tests/req_res_state_bounds.rs",
    edition = "2021",
    deps = [
        ":nockchain-libp2p-io",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "nockchain_libp2p_io_req_res_ip_peer_banning_test",
    size = "small",
    srcs = [
        "tests/req_res_ip_peer_banning.rs",
    ],
    aliases = aliases(),
    crate_root = "tests/req_res_ip_peer_banning.rs",
    edition = "2021",
    deps = [
        ":nockchain-libp2p-io",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "nockchain_libp2p_io_req_res_pow_test",
    size = "small",
    srcs = [
        "tests/req_res_pow.rs",
    ],
    aliases = aliases(),
    crate_root = "tests/req_res_pow.rs",
    edition = "2021",
    deps = [
        ":nockchain-libp2p-io",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "nockchain_libp2p_io_req_res_liar_bans_test",
    size = "small",
    srcs = [
        "tests/req_res_liar_bans.rs",
    ],
    aliases = aliases(),
    crate_root = "tests/req_res_liar_bans.rs",
    edition = "2021",
    deps = [
        ":nockchain-libp2p-io",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "nockchain_libp2p_io_req_res_kernel_pressure_test",
    size = "small",
    srcs = [
        "tests/req_res_kernel_pressure.rs",
    ],
    aliases = aliases(),
    crate_root = "tests/req_res_kernel_pressure.rs",
    edition = "2021",
    deps = [
        ":nockchain-libp2p-io",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
